CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

28 February 2007
+ Added browser detection support under x11


Version 1.4.2
----------------------------------------------------------------------
27 February 2007
+ Fixed shortenUrl function in Text.php.


Version 1.4.1
----------------------------------------------------------------------

26 February 2007
+ Removed constructor references from Template.php
+ Added Boost warning.

23 February 2007
+ phpws_info can now list browser info.
+ Editor
  o Removed htmlarea directory
  o Added supported.php files to FCK and tinymce (simple doesn't need
    it)
  o Editor will now check the user cookie for an Editor choice. It
    defaults to the core config.php setting.
  o Set support settings for safari in tinymce

21 February 2007
+System-wide
  o Created theme_tags.txt files in all modules that use content
    variables.
  o Created docs directories in all modules.
  o Moved CHANGELOG files to new docs directories.

+ Translate
  o fixed i18n files. en_EN.php changed to en_US.php
  o Updated files: conf/i18n/en_US.php

+ Function
  o Added a parse check on a PHP 4 function name for Compat mode.

+ DB_Pager
  o Cleaned up translate functions.
  o Added alt and title parameters to sorting images for xhtml
    compliance.

+ Documentation - fixed typo in DB_Pager.txt


Version 1.4.0
----------------------------------------------------------------------

20 February 2007
+ Changed version file and setup with new version.
+ Raised version to 1.1.0
+ Convert
  o Fixed setLimit calls.
  o Calendar - New schedule is made default public after conversion.
  o Categories - Ignores categories with zero id.

19 February 2007
+ Database
  o Added limit error check to mysql.php and mysqli.php

+Module
  o Changed default image and file directories to false.

14 February 2007
+ Theme
  o changed padded style from px to em